--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Adam Staples
-description: Senior Software Engineer for Imagine Learning
+description: Reflective Engineer
